--- a/index.html
+++ b/index.html
@@ -3,12 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calidone e Recchia</title>
+    <title>Calidone Recchia</title>
 </head>
 <body>
     <header>
         <img src="img/logo.png" alt="">
         <h1>Grande experiência e atuação em temas que impactam o Direito no cenário jurídico brasileiro.</h1>
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">Escritorio</a>
+            <a href="#">Equipe</a>
+            <a href="#">Areas de Atuação</a> 
+            <a href="#">Artigos e Noticias</a>
+        </nav>
     </header>
     <body>
         <section>
@@ -19,12 +26,12 @@
             </article>
             <article class="atuação">
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>Direito Eleitoral e Político</li>
+                <li>Direito Administrativo e Tribunal de Contas</li>
+                <li>Relações Governamentais e Assessoria Parlamentar</li>
+                <li>Direito Civil</li>
+                <li>Direito Constitucional</li>
+                <li>Compliance em Questões de Gênero e Diversidade</li>
             </ul>
             </article>
             <article Class="destaques">
