--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
         <img src="img/logo.png" alt="">
         <h1>Grande experiência e atuação em temas que impactam o Direito no cenário jurídico brasileiro.</h1>
         <nav>
-            <a href="#">Home</a>
-            <a href="#">Escritorio</a>
-            <a href="#">Equipe</a>
-            <a href="#">Areas de Atuação</a> 
-            <a href="#">Artigos e Noticias</a>
+            <a href="index.html">Home</a>
+            <a href="arquivos/paginas/histora.html">Escritorio</a>
+            <a href="arquivos/paginas/equipe.html">Equipe</a>
+            <a href="arquivos/paginas/atuacao.html">Areas de Atuação</a> 
+            <a href="arquivos/paginas/destaques.html">Artigos e Noticias</a>
         </nav>
     </header>
     <body>
@@ -25,6 +25,7 @@
                 <a href="arquivos/paginas/histora.html"></a>
             </article>
             <article class="atuação">
+                <h2>Areas de Atuação</h2>
             <ul>
                 <li>Direito Eleitoral e Político</li>
                 <li>Direito Administrativo e Tribunal de Contas</li>
@@ -37,24 +38,24 @@
             <article Class="destaques">
                 <h2>Destaques</h2>
                 <div>
-                    <img src="" alt="">
-                    <h3></h3>
-                    <p></p>
+                    <img src="img/noticia1.jpg" alt="">
+                    <h3>Conversa Inclusiva na AGU</h3>
+                    <p>Nossa sócia Maíra Recchia falou na III Roda de Conversa Inclusiva na AGU</p>
                 </div>
                 <div>
-                    <img src="" alt="">
-                    <h3></h3>
-                    <p></p>
+                    <img src="img/noticia2.jpg" alt="">
+                    <h3>Eleições Municipais da OAB</h3>
+                    <p>Nossa sócia foi designada como Coordenadora Regional de São Paulo do Observatório Nacional das Eleições Municipais de 2024 da OAB</p>
                 </div>
                 <div>
-                    <img src="" alt="">
-                    <h3></h3>
-                    <p></p>
+                    <img src="img/noticia3.jpg" alt="">
+                    <h3>Nossa sócia falou ao Estadão</h3>
+                    <p>Nossa sócia fundadora Dra. Maíra Recchia foi convidada pelo Estadão</p>
                 </div>
                 <div>
-                    <img src="" alt="">
-                    <h3></h3>
-                    <p></p>
+                    <img src="img/noticia4.jpg" alt="">
+                    <h3>Nossa sócia Maíra Recchia falou ao Globo</h3>
+                    <p>Nossa sócia fundadora Dra. Maíra Recchia falou ao Globo, na coluna de Malu Gaspar</p>
                 </div>
                 <a href="arquivos/paginas/destaques.html"></a>
             </article>
