--- a/arquivos/paginas/atuacao.html
+++ b/arquivos/paginas/atuacao.html
@@ -8,7 +8,8 @@
 <body>
     <header>
         <img src="img/logo.png" alt="">
-        <h1>Grande experiência e atuação em temas que impactam o Direito no cenário jurídico brasileiro.</h1>
+        <h1>Áreas de Atuação</h1>
+        <p>Estamos prontos para ouvir você. Entre em contato e descubra como podemos ajudar a transformar desafios em soluções jurídicas eficazes.</p>
         <nav>
             <a href="../../index.html">Home</a>
             <a href="histora.html">Escritorio</a>
