--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calidone Recchia</title>
+    <link rel="stylesheet" href="arquivos/css/styletexto.css">
 </head>
 <body>
     <header>
-        <img src="img/logo.png" alt="">
+        <img class="imagem" src="img/logo-p.jpg" alt="">
         <h1>Grande experiência e atuação em temas que impactam o Direito no cenário jurídico brasileiro.</h1>
         <nav>
             <a href="index.html">Home</a>
@@ -17,7 +18,7 @@
             <a href="arquivos/paginas/destaques.html">Artigos e Noticias</a>
         </nav>
     </header>
-    <body>
+    <main>
         <section>
             <article class="lore">
                 <h2>HISTÓRIA</h2>
@@ -35,31 +36,32 @@
                 <li>Compliance em Questões de Gênero e Diversidade</li>
             </ul>
             </article>
+            <h2>Destaques</h2>
             <article Class="destaques">
-                <h2>Destaques</h2>
-                <div>
-                    <img src="img/noticia1.jpg" alt="">
-                    <h3>Conversa Inclusiva na AGU</h3>
-                    <p>Nossa sócia Maíra Recchia falou na III Roda de Conversa Inclusiva na AGU</p>
-                </div>
-                <div>
-                    <img src="img/noticia2.jpg" alt="">
-                    <h3>Eleições Municipais da OAB</h3>
-                    <p>Nossa sócia foi designada como Coordenadora Regional de São Paulo do Observatório Nacional das Eleições Municipais de 2024 da OAB</p>
-                </div>
-                <div>
-                    <img src="img/noticia3.jpg" alt="">
-                    <h3>Nossa sócia falou ao Estadão</h3>
-                    <p>Nossa sócia fundadora Dra. Maíra Recchia foi convidada pelo Estadão</p>
-                </div>
-                <div>
-                    <img src="img/noticia4.jpg" alt="">
-                    <h3>Nossa sócia Maíra Recchia falou ao Globo</h3>
-                    <p>Nossa sócia fundadora Dra. Maíra Recchia falou ao Globo, na coluna de Malu Gaspar</p>
-                </div>
+                
+                    <div class="not1">
+                        <img src="img/noticia1.jpg" alt="">
+                        <h3>Conversa Inclusiva na AGU</h3>
+                        <p>Nossa sócia Maíra Recchia falou na III Roda de Conversa Inclusiva na AGU</p>
+                    </div>
+                    <div class="not2">
+                        <img src="img/noticia2.jpg" alt="">
+                        <h3>Eleições Municipais da OAB</h3>
+                        <p>Nossa sócia foi designada como Coordenadora Regional de São Paulo do Observatório Nacional das Eleições Municipais de 2024 da OAB</p>
+                    </div>
+                    <div class="not3">
+                        <img src="img/noticia3.jpg" alt="">
+                        <h3>Nossa sócia falou ao Estadão</h3>
+                        <p>Nossa sócia fundadora Dra. Maíra Recchia foi convidada pelo Estadão</p>
+                    </div>
+                    <div class="not4">
+                        <img src="img/noticia4.jpg" alt="">
+                        <h3>Nossa sócia Maíra Recchia falou ao Globo</h3>
+                        <p>Nossa sócia fundadora Dra. Maíra Recchia falou ao Globo, na coluna de Malu Gaspar</p>
+                    </div>
                 <a href="arquivos/paginas/destaques.html"></a>
             </article>
-            <article>
+            <article class="contatos">
                 <h2>Contato</h2>
                 <div>
                     <h3>Unidade São Paulo</h3>
@@ -78,10 +80,10 @@
                 </div>
             </article>
         </section>
-    </body>
+    </main>
     <footer>
         <section>
-            <div>
+            <div class="links">
                 <a href="#">Chamar no WhatsApp</a>
                 <a href="#"> instagram.com/calidonerecchia/</a>
             </div>
