--- a/arquivos/paginas/destaques.html
+++ b/arquivos/paginas/destaques.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calidone Recchia</title>
+    <link rel="stylesheet" href="../css/styletexto.css">
 </head>
 <body>
     <header>
