--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calidone Recchia</title>
     <link rel="stylesheet" href="arquivos/css/styletexto.css">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -17,6 +18,11 @@
             <a href="arquivos/paginas/atuacao.html">Areas de Atuação</a> 
             <a href="arquivos/paginas/destaques.html">Artigos e Noticias</a>
         </nav>
+        <div class="menuani" id="menu" onclick="showhide('itens'), mudar(this)">
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
+        </div>
     </header>
     <main>
         <section>
@@ -27,14 +33,24 @@
             </article>
             <article class="atuação">
                 <h2>Areas de Atuação</h2>
-            <ul>
-                <li>Direito Eleitoral e Político</li>
-                <li>Direito Administrativo e Tribunal de Contas</li>
-                <li>Relações Governamentais e Assessoria Parlamentar</li>
-                <li>Direito Civil</li>
-                <li>Direito Constitucional</li>
-                <li>Compliance em Questões de Gênero e Diversidade</li>
-            </ul>
+                <div>
+                    <p>Direito Eleitoral e Político</p>
+                </div>
+                <div>
+                    <p>Direito Administrativo e Tribunal de Contas</p>
+                </div>
+                <div>
+                    <p>Relações Governamentais e Assessoria Parlamentar</p>
+                </div>
+                <div>
+                   <p>Direito Civil</p>
+                </div>
+                <div>
+                    <p>Direito Constitucional</p>
+                </div>
+                <div>
+                    <p>Compliance em Questões de Gênero e Diversidade</p>
+                </div>
             </article>
             <h2>Destaques</h2>
             <article Class="destaques">
